[package]
name       ='entropy-runtime'
description="The substrate runtime for the Entropy chain node"
version    ='0.2.0-rc.1'
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
build      ='build.rs'
edition    ='2021'
publish    =false

[package.metadata.docs.rs]
targets=["x86_64-unknown-linux-gnu"]

[dependencies]

# Third-party dependencies
codec={ package="parity-scale-codec", version="3.6.3", default-features=false, features=[
  "derive",
  "max-encoded-len",
] }
hex-literal={ version="0.4.1", optional=true }
log={ version="0.4.22", default-features=false }
scale-info={ version="2.11", default-features=false, features=["derive"] }
static_assertions="1.1.0"

# Substrate Primitives
sp-api                ={ version="27.0.0", default-features=false }
sp-authority-discovery={ version="27.0.0", default-features=false }
sp-block-builder      ={ version="27.0.0", default-features=false }
sp-consensus-babe     ={ version="0.33.0", default-features=false }
sp-core               ={ version="29.0.0", default-features=false }
sp-inherents          ={ version="27.0.0", default-features=false }
sp-io                 ={ version="31.0.0", default-features=false }
sp-npos-elections     ={ version="27.0.0", default-features=false }
sp-offchain           ={ version="27.0.0", default-features=false }
sp-runtime            ={ version="32.0.0", default-features=false }
sp-session            ={ version="28.0.0", default-features=false }
sp-staking            ={ version="27.0.0", default-features=false }
sp-std                ={ version="14.0.0", default-features=false }
sp-storage            ={ version="20.0.0", default-features=false, optional=true }
sp-transaction-pool   ={ version="27.0.0", default-features=false }
sp-version            ={ version="30.0.0", default-features=false }
sp-genesis-builder    ={ version="0.8.0", default-features=false }

# FRAME Dependencies
frame-benchmarking             ={ version="29.0.0", default-features=false, optional=true }
frame-election-provider-support={ version="29.0.0", default-features=false }
frame-executive                ={ version="29.0.0", default-features=false }
frame-support                  ={ version="29.0.0", default-features=false }
frame-system                   ={ version="29.0.0", default-features=false }
frame-system-benchmarking      ={ version="29.0.0", default-features=false, optional=true }
frame-system-rpc-runtime-api   ={ version="27.0.0", default-features=false }
frame-try-runtime              ={ version="0.35.0", default-features=false, optional=true }

# Substrate Pallets
pallet-authority-discovery                   ={ version="29.0.0", default-features=false }
pallet-authorship                            ={ version="29.0.0", default-features=false }
pallet-babe                                  ={ version="29.0.0", default-features=false }
pallet-bags-list                             ={ version="28.0.0", default-features=false }
pallet-balances                              ={ version="29.0.0", default-features=false }
pallet-bounties                              ={ version="28.0.0", default-features=false }
pallet-collective                            ={ version="29.0.0", default-features=false }
pallet-democracy                             ={ version="29.0.0", default-features=false }
pallet-election-provider-multi-phase         ={ version="28.0.0", default-features=false }
pallet-election-provider-support-benchmarking={ version="28.0.0", default-features=false, optional=true }
pallet-elections-phragmen                    ={ version="30.0.0", default-features=false }
pallet-grandpa                               ={ version="29.0.0", default-features=false }
pallet-identity                              ={ version="29.0.0", default-features=false }
pallet-im-online                             ={ version="28.0.0", default-features=false }
pallet-indices                               ={ version="29.0.0", default-features=false }
pallet-membership                            ={ version="29.0.0", default-features=false }
pallet-multisig                              ={ version="29.0.0", default-features=false }
pallet-nomination-pools                      ={ version="26.0.0", default-features=false }
pallet-nomination-pools-benchmarking         ={ version="27.0.0", default-features=false, optional=true }
pallet-offences                              ={ version="28.0.0", default-features=false }
pallet-offences-benchmarking                 ={ version="29.0.0", default-features=false, optional=true }
pallet-preimage                              ={ version="29.0.0", default-features=false }
pallet-proxy                                 ={ version="29.0.0", default-features=false }
pallet-recovery                              ={ version="29.0.0", default-features=false }
pallet-scheduler                             ={ version="30.0.0", default-features=false }
pallet-session-benchmarking                  ={ version="29.0.0", default-features=false, optional=true }
pallet-session                               ={ version="29.0.0", default-features=false, features=["historical"] }
pallet-staking                               ={ version="29.0.0", default-features=false }
pallet-staking-reward-curve                  ={ version="11.0.0", default-features=false }
pallet-sudo                                  ={ version="29.0.0", default-features=false, optional=true }
pallet-timestamp                             ={ version="28.0.0", default-features=false }
pallet-tips                                  ={ version="28.0.0", default-features=false }
pallet-transaction-payment                   ={ version="29.0.0", default-features=false }
pallet-transaction-payment-rpc-runtime-api   ={ version="29.0.0", default-features=false }
pallet-transaction-storage                   ={ version="28.0.0", default-features=false }
pallet-treasury                              ={ version="28.0.0", default-features=false }
pallet-utility                               ={ version="29.0.0", default-features=false }
pallet-vesting                               ={ version="29.0.0", default-features=false }

# Entropy Pallets
pallet-programs         ={ version='0.2.0-rc.1', path='../pallets/programs', default-features=false }
pallet-propagation      ={ version='0.2.0-rc.1', path='../pallets/propagation', default-features=false }
pallet-registry         ={ version='0.2.0-rc.1', path='../pallets/registry', default-features=false }
pallet-slashing         ={ version='0.2.0-rc.1', path='../pallets/slashing', default-features=false }
pallet-staking-extension={ version='0.2.0-rc.1', path='../pallets/staking', default-features=false }
pallet-transaction-pause={ version='0.2.0-rc.1', path='../pallets/transaction-pause', default-features=false }
pallet-parameters       ={ version='0.2.0-rc.1', path='../pallets/parameters', default-features=false }
pallet-oracle       ={ version='0.2.0-rc.1', path='../pallets/oracle', default-features=false }

entropy-shared={ version="0.2.0-rc.1", path="../crates/shared", default-features=false, features=[
  "wasm-no-std",
] }

[build-dependencies]
substrate-wasm-builder={ version="18.0.0", optional=true }

[features]
default=["std"]
with-tracing=["frame-executive/with-tracing"]
std=[
  "codec/std",
  "frame-benchmarking/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "frame-try-runtime/std",
  "log/std",
  "pallet-authority-discovery/std",
  "pallet-authorship/std",
  "pallet-babe/std",
  "pallet-bags-list/std",
  "pallet-balances/std",
  "pallet-bounties/std",
  "pallet-collective/std",
  "pallet-democracy/std",
  "pallet-election-provider-multi-phase/std",
  "pallet-elections-phragmen/std",
  "pallet-grandpa/std",
  "pallet-identity/std",
  "pallet-im-online/std",
  "pallet-indices/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-nomination-pools-benchmarking?/std",
  "pallet-nomination-pools/std",
  "pallet-offences/std",
    "pallet-oracle/std",
  "pallet-preimage/std",
  "pallet-parameters/std",
  "pallet-programs/std",
  "pallet-propagation/std",
  "pallet-proxy/std",
  "pallet-recovery/std",
  "pallet-registry/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-slashing/std",
  "pallet-staking-extension/std",
  "pallet-staking/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-tips/std",
  "pallet-transaction-pause/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-storage/std",
  "pallet-treasury/std",
  "pallet-utility/std",
  "pallet-vesting/std",
  "scale-info/std",
  "sp-api/std",
  "sp-authority-discovery/std",
  "sp-block-builder/std",
  "sp-consensus-babe/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-genesis-builder/std",
  "sp-io/std",
  "sp-npos-elections/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "substrate-wasm-builder",
]
runtime-benchmarks=[
  "frame-benchmarking/runtime-benchmarks",
  "frame-election-provider-support/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "hex-literal",
  "pallet-babe/runtime-benchmarks",
  "pallet-bags-list/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-bounties/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-democracy/runtime-benchmarks",
  "pallet-election-provider-multi-phase/runtime-benchmarks",
  "pallet-election-provider-support-benchmarking/runtime-benchmarks",
  "pallet-elections-phragmen/runtime-benchmarks",
  "pallet-grandpa/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-im-online/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-membership/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-nomination-pools-benchmarking/runtime-benchmarks",
  "pallet-offences-benchmarking/runtime-benchmarks",
  "pallet-oracle/runtime-benchmarks",
  "pallet-parameters/runtime-benchmarks",
  "pallet-preimage/runtime-benchmarks",
  "pallet-programs/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-recovery/runtime-benchmarks",
  "pallet-registry/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-session-benchmarking/runtime-benchmarks",
  "pallet-staking-extension/runtime-benchmarks",
  "pallet-staking/runtime-benchmarks",
  "pallet-sudo/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-tips/runtime-benchmarks",
  "pallet-transaction-pause/runtime-benchmarks",
  "pallet-transaction-storage/runtime-benchmarks",
  "pallet-treasury/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-vesting/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "sp-storage",
]
try-runtime=[
  "frame-executive/try-runtime",
  "frame-system/try-runtime",
  "frame-try-runtime",
  "pallet-authority-discovery/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-babe/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-bounties/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-democracy/try-runtime",
  "pallet-election-provider-multi-phase/try-runtime",
  "pallet-elections-phragmen/try-runtime",
  "pallet-grandpa/try-runtime",
  "pallet-identity/try-runtime",
  "pallet-im-online/try-runtime",
  "pallet-indices/try-runtime",
  "pallet-membership/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-nomination-pools/try-runtime",
  "pallet-offences/try-runtime",
  "pallet-oracle/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-propagation/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-parameters/try-runtime",
  "pallet-recovery/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-session/try-runtime",
  "pallet-staking/try-runtime",
  "pallet-sudo/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-tips/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-treasury/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-vesting/try-runtime",
]
