[package]
name = "subxt_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { git = "https://github.com/paritytech/subxt.git" }
sp-keyring = "5.0.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
