[package]
name   ="subxt_test"
version="0.1.0"
edition="2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt={ git="https://github.com/jakehemmerle/subxt.git", branch="substrate-master" }
sp-keyring={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
async-std={ version="1.9.0", features=["attributes", "tokio1"] }
codec={ package="parity-scale-codec", version="3.0.0", default-features=false, features=[
  "derive",
  "full",
  "bit-vec",
] }
