[package]
name       ="entropy-client"
version    ="0.1.0"
edition    ="2021"
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
description='A client for the Entropy chain node and Entropy TSS server'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'

[dependencies]
sha3          ="0.10.8"
serde         ={ version="1.0", default-features=false, features=["derive"] }
entropy-shared={ version="0.1.0", path="../shared", default-features=false }
subxt         ={ version="0.35.3", default-features=false, features=["jsonrpsee"] }
num           ="0.4.3"
thiserror     ="1.0.61"
futures       ="0.3"
sp-core       ={ version="31.0.0", default-features=false, features=["full_crypto", "serde"] }
tracing       ="0.1.37"

# Present when "full-client" feature is active
blake2          ={ version="0.10.4", optional=true }
rand_core       ={ version="0.6.4", optional=true }
serde_json      ={ version="1.0", optional=true }
x25519-dalek    ={ version="2.0.1", features=["static_secrets"], optional=true }
entropy-protocol={ version="0.1.0", path="../protocol", optional=true, default-features=false }
reqwest         ={ version="0.12.4", features=["json", "stream"], optional=true }
base64          ={ version="0.22.0", optional=true }
synedrion       ={ git="https://github.com/entropyxyz/synedrion", rev="7df95fe72781797dc369db00b68c27907559f31a", optional=true }
hex             ={ version="0.4.3", optional=true }

# Only for the browser
js-sys={ version="0.3.68", optional=true }
tokio ="1.36"

[dev-dependencies]
serial_test="3.1.1"

[features]
default=["native", "full-client-native"]
native=[
  "entropy-shared/std",
  "entropy-shared/user-native",
  "subxt/native",
  "subxt/substrate-compat",
]
wasm=["entropy-shared/wasm", "entropy-shared/user-wasm", "subxt/web"]

# This adds full client functionality. It is behind a feature flag because it is not needed by
# entropy-tss
full-client=[
  "dep:blake2",
  "dep:rand_core",
  "dep:serde_json",
  "dep:x25519-dalek",
  "dep:entropy-protocol",
  "dep:reqwest",
  "dep:base64",
  "dep:synedrion",
  "dep:hex",
]
full-client-native=["full-client", "entropy-protocol/server"]
full-client-wasm=["full-client", "entropy-protocol/wasm", "dep:js-sys"]
