[package]
name       ="entropy-client"
version    ="0.4.0-rc.1"
edition    ="2021"
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
description='A client for the Entropy chain node and Entropy TSS server'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'

[dependencies]
sha3          ="0.10.8"
serde         ={ version="1.0", default-features=false, features=["derive"] }
entropy-shared={ version="0.4.0-rc.1", path="../shared", default-features=false }
subxt         ={ version="0.42.0", default-features=false, features=["jsonrpsee"] }
subxt-core    ={ version="0.42.0", default-features=false }
num           ="0.4.3"
thiserror     ="2.0.12"
futures       ="0.3"
sp-core       ={ version="36.1.0", default-features=false, features=["full_crypto", "serde"] }
tracing       ="0.1.41"
rand          ={ version="0.8", default-features=false }
anyhow        ="1.0.98"
tdx-quote     = { version="0.0.3", features=["mock"] }

# Present when "full-client" feature is active
blake2            ={ version="0.10.4", optional=true }
rand_core         ={ version="0.6.4", optional=true }
serde_json        ={ version="1.0", optional=true }
x25519-dalek      ={ version="2.0.1", features=["static_secrets"], optional=true }
entropy-protocol  ={ version="0.4.0-rc.1", path="../protocol", optional=true, default-features=false }
reqwest           ={ version="0.12.20", features=["json", "stream"], optional=true }
base64            ={ version="0.22.0", optional=true }
synedrion         ={ version="0.3.0", optional=true, features=["k256"] }
hex               ={ version="0.4.3", optional=true }
parity-scale-codec={ version="3.7.2", default-features=false, optional=true }
k256              ={ version="0.13", default-features=false, features=["ecdsa"], optional=true }

# Only for the browser
js-sys={ version="0.3.74", optional=true }
tokio ={ version="1.44", features=["time"] }
backoff            ={ version="0.4.0", features=["tokio"] }

[dev-dependencies]
serial_test          ="3.2.0"
sp-keyring           ="41.0.0"
entropy-testing-utils={ path="../testing-utils" }

[features]
default=["native", "full-client-native"]
native =["entropy-shared/std", "entropy-shared/user-native", "subxt/native"]
wasm   =["entropy-shared/wasm", "entropy-shared/user-wasm", "subxt/web"]

# This adds full client functionality. It is behind a feature flag because it is not needed by
# entropy-tss
full-client=[
  "dep:blake2",
  "dep:rand_core",
  "dep:serde_json",
  "dep:x25519-dalek",
  "dep:entropy-protocol",
  "dep:reqwest",
  "dep:base64",
  "dep:synedrion",
  "dep:k256",
  "dep:hex",
  "dep:parity-scale-codec",
]
full-client-native=["full-client", "entropy-protocol/server"]
full-client-wasm=["full-client", "entropy-protocol/wasm", "dep:js-sys"]
# Causes TDX quotes to be verified
production=["entropy-shared/production"]
