[package]
name       ="entropy-kvdb"
description="Encrypted key-value database for the Entropy Theshold Signing Server"
version    ="0.3.0-rc.1"
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
# Common
rand     ={ version="0.8", default-features=false }
serde    ={ version="1.0", features=["derive"] }
thiserror="1.0.64"
hex      ="0.4.3"

# Substrate
sp-core={ version="31.0.0", default-features=false }

# Crypto
zeroize         ={ version="1.8", features=["zeroize_derive"], default-features=false }
rpassword       ={ version="7.3.1", default-features=false }
scrypt          ={ version="0.11.0", default-features=false, features=["std"] }
chacha20poly1305={ version="0.9", features=["alloc"], default-features=false }
synedrion       ={ git="https://github.com/entropyxyz/synedrion", rev="1d210d149dfeb0dca1dd41d7fac4d0bf03c686fa" }

# Async
tokio  ={ version="1.40", features=["macros", "sync", "fs", "rt-multi-thread", "io-util"] }
tracing={ version="0.1", default-features=false }

# Misc
sled            ="0.34.7"
bincode         ="1.3.3"
entropy-protocol={ version="0.3.0-rc.1", path="../protocol" }

[dev-dependencies]
serial_test="3.1.1"
