[package]
name       ='entropy-protocol'
version    ='0.1.0'
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
description="Entropy Signing and DKG protocol execution and transport logic"
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
async-trait        ="0.1.76"
entropy-shared     ={ path="../shared", default-features=false }
synedrion          ="0.1"
serde              ={ version="1.0", features=["derive"], default-features=false }
subxt              ={ version="0.34.0", default-features=false }
sp-core            ={ version="28.0.0", default-features=false, features=["full_crypto", "serde"] }
tokio              ={ version="1.36", features=["sync", "rt", "macros"] }
x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
futures            ="0.3"
hex                ="*"
blake2             ="0.10.4"
thiserror          ="1.0.55"
snow               ="0.9.6"
getrandom          ={ version="0.2", features=["js"] }
rand_core          ={ version="0.6.4", features=["getrandom"] }
tracing            ="0.1.37"
bincode            ="1.3.3"
serde_json         ="1.0"
zeroize            ="1.5.7"
generic-array      ="0.14.6"
hpke-rs            ="0.2.0"
hpke-rs-crypto     ="0.2.0"
hpke-rs-rust-crypto="0.2.0"

# Used only with the `server` feature to implement the WsConnection trait
axum             ={ version="0.7.5", features=["ws"], optional=true }
tokio-tungstenite={ version="0.21.0", optional=true }

# Used only with the `wasm` feature
gloo-net={ version="0.5.0", default-features=false, features=["websocket"], optional=true }
wasm-bindgen-futures={ version="0.4.42", optional=true }
wasm-bindgen={ version="0.2.92", optional=true }
wasm-bindgen-derive={ version="0.2", optional=true }
js-sys={ version="0.3.69", optional=true }
base64={ version="0.22.0", optional=true }
schnorrkel={ version="0.11.4", default-features=false, features=[
  "std",
], optional=true }

[dev-dependencies]
sp-keyring="31.0.0"

[features]
default=["server"]

server=[
  "dep:axum",
  "dep:tokio-tungstenite",
  "entropy-shared/std",
  "subxt/substrate-compat",
  "subxt/native",
]
wasm=[
  "entropy-shared/wasm",
  "dep:gloo-net",
  "dep:wasm-bindgen-futures",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-derive",
  "dep:js-sys",
  "dep:base64",
  "subxt/web",
  "dep:schnorrkel",
]

# Extra functionality only intended for use in development
unsafe=[]

# Use sp-core compatible sr25519 keypairs on wasm, rather then polkadot JS. For testing only
wasm-test=["wasm"]

[lib]
crate-type=["cdylib", "rlib"]
