[package]
name       ="entropy-shared"
description="Shared types used by the Entropy chain node and Entropy Threshold Signing Server"
version    ="0.0.12"
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
codec       ={ package="parity-scale-codec", version="3.0.0", default-features=false }
scale-info  ={ version='2.11.1', default-features=false, features=['derive'] }
serde       ={ version="1.0", default-features=false, features=["derive"] }
serde_derive="1.0.147"
strum       ="0.26.2"
strum_macros="0.26.2"

sp-runtime ={ version="32.0.0", default-features=false, optional=true, features=["serde"] }
sp-std     ={ version="12.0.0", default-features=false }
lazy_static={ version="1.4.0", features=["spin_no_std"] }
hex-literal="0.4.1"
sp-core    ={ version="29.0.0", default-features=false }

[features]
default    =["std"]
std        =["codec/std", "scale-info/std", "serde/std", "sp-runtime/std", "sp-std/std"]
wasm       =["codec/std", "scale-info/std", "serde/std", "sp-std/std"]
wasm-no-std=["sp-runtime"]
