[package]
name       ="entropy-test-cli"
description="Simple command line interface client for testing Entropy"
version    ='0.3.0'
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
entropy-client    ={ version="0.3.0", path="../client" }
clap              ={ version="4.5.30", features=["derive"] }
colored           ="3.0.0"
subxt             ="0.35.3"
sp-core           ="31.0.0"
anyhow            ="1.0.95"
tokio             ={ version="1.43", features=["macros", "rt-multi-thread", "io-util", "process"] }
hex               ="0.4.3"
bincode           ="1.3.3"
x25519-dalek      ="2.0.1"
sp-runtime        ={ version="32.0.0", default-features=false }
entropy-shared    ={ version="0.3.0", path="../shared" }
serde_json        ="1.0.138"
serde             ={ version="1.0.217", features=["derive"] }
reqwest           ="0.12.12"
parity-scale-codec={ version="3.7.4", default-features=false }
